// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UpdateInfo/> renders users 1`] = `
<div
  className="update-info"
>
  <div
    className="update-info__time-frame"
    id="time-frame"
  >
    since: 
    <span
      style={
        Object {
          "color": "blue",
        }
      }
    >
      Sat, 11/03
    </span>
     to 
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
      Thu, 16/03
    </span>
  </div>
  <span
    className="update-info__span"
    id="updateDate"
  >
     Last update: 2017-03-16T13:46:00.570Z
  </span>
  <span
    className="update-info__span"
  >
    We did get
     
    50
     
    and filtered
     
    4
  </span>
</div>
`;

exports[`<UpdateInfo/> renders without crashing UpdateInfo 1`] = `
<div
  className="update-info"
>
  0
  <span
    className="update-info__span"
  >
    We did get
     
    0
     
    and filtered
     
    0
  </span>
</div>
`;
